# Omgevingsbeleid-API

./: .coverage  .coveragerc  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  AUTHORS  CONTRIBUTING.md  Makefile  Pipfile  README.md  alembic.ini  ambitie.py  application.py  azure-pipelines-poc-be.yml  azure-pipelines.yml  bandit.yml  cmd.py  cmds.py  create_user.py  datamodel.py  db.py  db_diagram.txt  demo.txt  docker-compose.yml  errorcodes.py  errors.py  example.py  example_settings.py  generate_client_creds.ps1  generate_client_creds.sh  generate_passwords.ps1  geoserver.md  globals.py  graph_view.html  helpers.py  index.py  index_search.py  json.json  maatregelen_fix.py  (+17 more)
Api/: api.py  application.py  commands.py  create_user.py  database.py  datamodel.py  settings.py
Auth/: commands.py  views.py
Dimensies/: ambitie.py  ambitie.yml  belangen.py  beleidsregel.py  beleidsregel.yml  beleidsrelaties.py  dimensie.py  doel.py  doel.yml  gebruikers.py  geothemas.py  maatregelen.py  opgaven.py  provinciaalbelang.py  provinciaalbelang.yml  provincialebelangen.py  thema.py  thema.yml  themas.py  verordening.py  werkingsgebieden.py
Docs/: index.html
Endpoints/: __init__.py  api_errors.py  base_schema.py  comparison.py  custom_fields.py  data_manager.py  endpoint.py  errors.py  geo_search.py  graph.py  normal.py  references.py  relation_data_manager.py  search.py  status_data_manager.py  stopwords.py  validators.py  version_endpoint.py
Feiten/: beleidsbeslissing.py  beleidsbeslissing_old.py  feit.py  feit_new.py
Models/: __init__.py  ambitie.py  ambities.py  (+19 more)
(+1684 files in other folders)
